@@ -1,3 +1,14 @@
+			      CHANGES IN markdown VERSION 1.0
+
+MAJOR CHANGES
+
+  o The default value of the encoding argument of renderMarkdown() and
+  markdownToHTML() has been changed from getOption("encoding") to "UTF-8". The
+  encoding of the input file will always be assumed to be UTF-8.
+
+  o markdownToHTML() will return a character vector encoded in UTF-8 (instead of
+  the system's native encoding) when not writing to an output file.
+
 			      CHANGES IN markdown VERSION 0.9
 
 BUG FIXES
